test/patterns/s0393_utf_8_validation/hafis/starchat/jml_syntax_checking.txt
./test/s0393_utf_8_validation/hafis/starchat/Solution.java:11: error: bad operand types for binary operator '<='
//@ requires(\forall int i; 0 <= i < data.length; ((data <= 255) && (data >= 0)));
                                                         ^
  first type:  int[]
  second type: int
./test/s0393_utf_8_validation/hafis/starchat/Solution.java:11: error: bad operand types for binary operator '>='
//@ requires(\forall int i; 0 <= i < data.length; ((data <= 255) && (data >= 0)));
                                                                          ^
  first type:  int[]
  second type: int
2 errors
